Fix some spacing

--- a/theme.css
+++ b/theme.css
@@ -78,7 +78,7 @@ header .container {
 }
 header img {
   display: block;
-  margin: 0 auto 10px;
+  margin: 0 auto 20px;
 }
 header .intro-text .name {
   display: block;
@@ -164,7 +164,7 @@ section.success a.active {
 }
 @media (max-width: 767px) {
   section {
-    padding: 75px 0;
+    padding: 40px 0;
   }
   section.first {
     padding-top: 75px;
